--- a/node-app/Dockerfile
+++ b/node-app/Dockerfile
@@ -1,5 +1,7 @@
-FROM node:16
+FROM node:20-alpine
 WORKDIR /app
+COPY package*.json ./
+RUN npm install
 COPY . .
-RUN npm install express
-CMD ["node", "index.js"]
+EXPOSE 3000
+CMD ["node", "server.js"]
