--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,14 @@
-server {
-    listen 80;
-    location / {
-        proxy_pass http://nodeapp:3000;
+events {}
+http {
+    server {
+        listen 80;
+        server_name localhost;
+
+        location / {
+            proxy_pass http://node-container:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
     }
 }
